remove python targets and unnecessary R targets
Fixes https://github.com/qiime/qiime-deploy/issues/55 and #97.

--- a/qiime-1.6.0/qiime.conf
+++ b/qiime-1.6.0/qiime.conf
@@ -70,7 +70,7 @@ release-location: ftp://thebeast.colorado.edu/pub/qiime-releases/qiime-1.6.0.tar
 relative-directory-add-to-path: bin
 copy-source-to-final-deploy: yes
 deps: pycogent, matplotlib
-set-environment-variables-deploypath: QIIME=./,QIIME_CONFIG_FP=../qiime_config,PYTHONPATH=lib/
+set-environment-variables-deploypath: QIIME=./,PYTHONPATH=lib/
 python-install-options: --install-scripts=bin/ --install-purelib=lib/
 
 [MySQL-python]
