--- a/qiime-1.8.0/qiime.conf
+++ b/qiime-1.8.0/qiime.conf
@@ -55,7 +55,7 @@ release-location: https://pypi.python.org/packages/source/q/qiime/qiime-1.8.0.ta
 relative-directory-add-to-path: bin
 copy-source-to-final-deploy: yes
 deps: pycogent, matplotlib
-set-environment-variables-deploypath: QIIME=./,QIIME_CONFIG_FP=../qiime_config,PYTHONPATH=lib/
+set-environment-variables-deploypath: QIIME=./,PYTHONPATH=lib/
 python-install-options: --install-scripts=bin/ --install-purelib=lib/
 
 [MySQL-python]
