--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -36,104 +36,12 @@ build-type: copy
 release-file-name: gg_13_8_otus.tar.gz
 release-location: ftp://greengenes.microbio.me/greengenes_release/gg_13_5/gg_13_8_otus.tar.gz
 
-[python]
-version: 2.7.3
-build-type: autoconf
-release-file-name: Python-2.7.3.tgz
-set-environment-variables-value: ATLAS=None,BLAS=None,LAPACK=None
-release-location: http://www.python.org/ftp/python/2.7.3/Python-2.7.3.tgz
-relative-directory-add-to-path: bin
-autoconf-make-options: -j4
-autoconf-configure-options: --enable-shared --enable-unicode=ucs2 --enable-unicode=ucs4
-set-environment-variables-deploypath: LD_LIBRARY_PATH=lib
-
-[qiime]
-version: 1.8.0
-build-type: python-distutils
-repository-local-name: qiime
-repository-location: git://github.com/qiime/qiime.git
-repository-type: git
-relative-directory-add-to-path: bin
-copy-source-to-final-deploy: yes
-deps: pycogent, matplotlib
-set-environment-variables-deploypath: QIIME=./,QIIME_CONFIG_FP=../qiime_config,PYTHONPATH=lib/
-python-install-options: --install-scripts=bin/ --install-purelib=lib/
-
-[MySQL-python]
-version: 1.2.3
-build-type: python-distutils
-release-file-name: MySQL-python-1.2.3.tar.gz
-release-location: http://sourceforge.net/projects/mysql-python/files/mysql-python/1.2.3/MySQL-python-1.2.3.tar.gz
-deps: python, setuptools
-
-[SQLAlchemy]
-version: 0.7.1
-build-type: python-distutils
-release-file-name: SQLAlchemy-0.7.1.tar.gz
-release-location: http://sourceforge.net/projects/sqlalchemy/files/sqlalchemy/0.7.1/SQLAlchemy-0.7.1.tar.gz
-deps: python
-
-[pycogent]
-version: 1.5.3
-build-type: python-distutils
-release-file-name: PyCogent-1.5.3.tgz
-set-environment-variables-value: TEST_DB=1
-copy-source-to-final-deploy: yes
-release-location: http://downloads.sourceforge.net/project/pycogent/PyCogent/1.5.3/PyCogent-1.5.3.tgz
-deps: numpy
-set-environment-variables-deploypath: PYCOGENT=./
-
-[pynast]
-version: 1.2.2
-build-type: python-distutils
-release-file-name: pynast-1.2.2.tar.gz
-release-location: https://pypi.python.org/packages/source/p/pynast/pynast-1.2.2.tar.gz
-relative-directory-add-to-path: bin
-deps: pycogent
-
-[numpy]
-version: 1.7.1
-build-type: python-distutils
-release-file-name: numpy-1.7.1.tar.gz
-release-location: http://sourceforge.net/projects/numpy/files/NumPy/1.7.1/numpy-1.7.1.tar.gz
-deps: python
-
-[matplotlib]
-version: 1.3.1
-build-type: python-distutils
-release-file-name: matplotlib-1.3.1.tar.gz
-release-location: http://downloads.sourceforge.net/project/matplotlib/matplotlib/matplotlib-1.3.1/matplotlib-1.3.1.tar.gz
-deps: numpy
-
-[mpi4py]
-version: 1.2.2
-build-type: python-distutils
-release-file-name: mpi4py-1.2.2.tar.gz
-release-location: http://mpi4py.googlecode.com/files/mpi4py-1.2.2.tar.gz
-deps: python
-
-[sphinx]
-version: 1.0.4
-build-type: python-distutils
-release-file-name: Sphinx-1.0.4.tar.gz
-release-location: http://pypi.python.org/packages/source/S/Sphinx/Sphinx-1.0.4.tar.gz#md5=d4067e42e75525ecf108ece471ce97bb
-deps: python, setuptools
-
 [raxml]
 version: 7.3.0
 build-type: make
 release-file-name:stamatak-standard-RAxML-5_7_2012.tgz
 release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.5.0-dependencies/stamatak-standard-RAxML-5_7_2012.tgz
 make-options: -f Makefile.gcc -j4
-relative-directory-add-to-path: .
-
-[fasttree]
-version: 2.1.3
-build-type: c-file
-release-file-name: FastTree-2.1.3.c
-release-location: http://www.microbesonline.org/fasttree/FastTree-2.1.3.c
-c-file-compile-options: -lm
-exe-name: FastTree
 relative-directory-add-to-path: .
 
 [cdbtools]
@@ -220,13 +128,6 @@ release-file-name: mothur-1.25.0.tar.gz
 release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.6.0-dependencies/mothur-1.25.0.tar.gz
 relative-directory-add-to-path: .
 
-[uclust]
-version: 1.2.22
-build-type: custom
-release-file-name: uclustq1.2.22_i86linux64
-release-location: http://drive5.com/uclust/uclustq1.2.22_i86linux64
-relative-directory-add-to-path: .
-
 [r]
 version: 3.0.2
 build-type: autoconf
@@ -264,20 +165,6 @@ r-package-name: ape
 r-package-repo: http://cran.r-project.org
 deps: r
 
-[gtools]
-version: latest
-build-type: r-package
-r-package-name: gtools
-r-package-repo: http://cran.r-project.org
-deps: r
-
-[klar]
-version: latest
-build-type: r-package
-r-package-name: klaR
-r-package-repo: http://cran.r-project.org
-deps: r
-
 [r-color-brewer]
 version: latest
 build-type: r-package
@@ -308,15 +195,6 @@ build-type: python-distutils
 release-file-name: pprospector-1.0.1.tar.gz
 release-location: http://sourceforge.net/projects/pprospector/files/pprospector-1.0.1.tar.gz
 relative-directory-add-to-path: bin
-deps: pycogent
-
-[biom-format]
-version: 1.3.1
-build-type: python-distutils
-release-file-name: biom-format-1.3.1.tar.gz
-release-location: https://pypi.python.org/packages/source/b/biom-format/biom-format-1.3.1.tar.gz
-relative-directory-add-to-path: bin
-deps: python, numpy, pyqi
 
 [rtax]
 version: 0.984
@@ -324,15 +202,6 @@ build-type: copy
 release-file-name: rtax-0.984.tgz
 release-location: http://static.davidsoergel.com/rtax-0.984.tgz
 relative-directory-add-to-path: .
-
-[ipython]
-version: latest
-build-type: python-distutils
-repository-local-name: ipython
-repository-location: git://github.com/ipython/ipython.git
-relative-directory-add-to-path: bin
-repository-type: git
-deps: python
 
 [parsinsert]
 version: 1.0.4
@@ -351,22 +220,6 @@ unzipped-name: MG-RAST-DRISEE-7b40fae
 release-location: https://github.com/MG-RAST/DRISEE/zipball/v1.2
 relative-directory-add-to-path: .
 
-[tornado]
-version: 3.1.1
-build-type: python-distutils
-release-file-name: tornado-3.1.1.tar.gz
-release-location: https://github.com/facebook/tornado/archive/v3.1.1.tar.gz
-relative-directory-add-to-path: bin
-deps: python
-
-[pyzmq]
-version: 2.1.11
-build-type: python-distutils
-release-file-name: pyzmq-2.1.11.tar.gz
-release-location: http://pypi.python.org/packages/source/p/pyzmq/pyzmq-2.1.11.tar.gz
-relative-directory-add-to-path: bin
-deps: python
-
 [pplacer]
 version: 1.1
 build-type: copy
@@ -374,13 +227,6 @@ release-file-name: pplacer-v1.1-Linux.tar.gz
 unzipped-name: pplacer-v1.1.alpha14-Linux-3.2.0
 release-location: http://matsen.fhcrc.org/pplacer/builds/pplacer-v1.1-Linux.tar.gz
 relative-directory-add-to-path: .
-
-[setuptools]
-version: 0.6c11
-build-type: python-distutils
-release-file-name: setuptools-0.6c11.tar.gz
-release-location: http://pypi.python.org/packages/source/s/setuptools/setuptools-0.6c11.tar.gz
-deps: python
 
 [bwa]
 version: 0.6.2
@@ -412,22 +258,6 @@ build-type: python-distutils
 release-file-name: tax2tree-v1.0.tar.gz
 release-location: https://downloads.sourceforge.net/project/tax2tree/tax2tree-v1.0.tar.gz
 relative-directory-add-to-path: bin
-deps: pycogent
-
-[gdata]
-version: 2.0.17
-build-type: python-distutils
-release-file-name: gdata-2.0.17.tar.gz
-release-location: http://gdata-python-client.googlecode.com/files/gdata-2.0.17.tar.gz
-deps: python
-
-[emperor]
-version: 0.9.3
-build-type: python-distutils
-release-file-name: emperor-0.9.3.tar.gz
-release-location: https://pypi.python.org/packages/source/e/emperor/emperor-0.9.3.tar.gz
-relative-directory-add-to-path: bin
-deps: numpy, qcli, setuptools
 
 [qiime-galaxy]
 version: 0.0.1
@@ -436,7 +266,6 @@ repository-local-name: qiime-galaxy
 repository-location: git://github.com/qiime/qiime-galaxy.git
 repository-type: git
 relative-directory-add-to-path: scripts
-deps: python, qiime
 set-environment-variables-deploypath: PYTHONPATH=lib/
 
 [galaxy]
@@ -444,31 +273,7 @@ version: release_2013.01.13
 build-type: copy
 release-file-name: galaxy-galaxy-dist-a4113cc1cb5e.tar.gz
 release-location: https://bitbucket.org/galaxy/galaxy-dist/get/release_2013.01.13.tar.gz
-deps: python, qiime, qiime-galaxy
-
-[qcli]
-version: 0.1.0
-build-type: python-distutils
-release-file-name: qcli-0.1.0.tar.gz
-release-location: ftp://thebeast.colorado.edu/pub/qcli-releases/qcli-0.1.0.tar.gz
-relative-directory-add-to-path: bin
-deps: python
-
-[pyqi]
-version: 0.3.1
-build-type: python-distutils
-release-file-name: pyqi-0.3.1.tar.gz
-release-location: https://pypi.python.org/packages/source/p/pyqi/pyqi-0.3.1.tar.gz
-relative-directory-add-to-path: bin
-deps: python, setuptools
-
-[pysqlite]
-version: 2.6.3
-build-type: python-distutils
-release-file-name: pysqlite-2.6.3.tar.gz
-release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.8.0-dependencies/pysqlite-2.6.3.tar.gz
-set-environment-variables-deploypath: PYTHONPATH=lib/
-deps: python
+deps: qiime-galaxy
 
 [ea-utils]
 version: 1.1.2-537
