--- a/qiime-1.5.0/qiime.conf
+++ b/qiime-1.5.0/qiime.conf
@@ -53,7 +53,7 @@ release-location: https://github.com/downloads/qiime/qiime/Qiime-1.5.0.tar.gz
 relative-directory-add-to-path: bin
 copy-source-to-final-deploy: yes
 deps: pycogent, matplotlib
-set-environment-variables-deploypath: QIIME=./,QIIME_CONFIG_FP=../qiime_config,PYTHONPATH=lib/
+set-environment-variables-deploypath: QIIME=./,PYTHONPATH=lib/
 python-install-options: --install-scripts=bin/ --install-purelib=lib/
 
 [MySQL-python]
