--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -56,7 +56,7 @@ repository-type: git
 relative-directory-add-to-path: bin
 copy-source-to-final-deploy: yes
 deps: pycogent, matplotlib
-set-environment-variables-deploypath: QIIME=./,QIIME_CONFIG_FP=../qiime_config,PYTHONPATH=lib/
+set-environment-variables-deploypath: QIIME=./,PYTHONPATH=lib/
 python-install-options: --install-scripts=bin/ --install-purelib=lib/
 
 [MySQL-python]
