--- a/pynast-dev/pynast.conf
+++ b/pynast-dev/pynast.conf
@@ -47,7 +47,7 @@ set-environment-variables-deploypath: PYCOGENT=./
 version: 1.2.2
 build-type: python-distutils
 repository-local-name: pynast
-repository-location: git://github.com/qiime/pynast.git
+repository-location: git://github.com/biocore/pynast.git
 repository-type: git
 copy-source-to-final-deploy: yes
 relative-directory-add-to-path: bin
