--- a/qiime-1.5.0/qiime.conf
+++ b/qiime-1.5.0/qiime.conf
@@ -84,7 +84,7 @@ set-environment-variables-deploypath: PYCOGENT=./
 version: 1.1
 build-type: python-distutils
 release-file-name: PyNAST-1.1.tgz
-release-location: http://downloads.sourceforge.net/project/pynast/PyNAST%20releases/PyNAST-1.1.tgz
+release-location: https://github.com/downloads/biocore/pynast/PyNAST-1.1.tgz
 relative-directory-add-to-path: bin
 deps: pycogent
 
