Fix pplacer and SQLAlchemy links
Fixes #101 #105.

--- a/qiime-1.8.0/qiime.conf
+++ b/qiime-1.8.0/qiime.conf
@@ -69,7 +69,7 @@ deps: python, setuptools
 version: 0.7.1
 build-type: python-distutils
 release-file-name: SQLAlchemy-0.7.1.tar.gz
-release-location: http://sourceforge.net/projects/sqlalchemy/files/sqlalchemy/0.7.1/SQLAlchemy-0.7.1.tar.gz
+release-location: https://pypi.python.org/packages/source/S/SQLAlchemy/SQLAlchemy-0.7.1.tar.gz
 deps: python
 
 [pycogent]
@@ -370,7 +370,7 @@ deps: python
 version: 1.1
 build-type: copy
 release-file-name: pplacer-v1.1-Linux.tar.gz
-unzipped-name: pplacer-v1.1.alpha14-Linux-3.2.0
+unzipped-name: pplacer-v1.1.alpha15-Linux-3.2.0
 release-location: http://matsen.fhcrc.org/pplacer/builds/pplacer-v1.1-Linux.tar.gz
 relative-directory-add-to-path: .
 
