sortmerna added to configure file

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -105,6 +105,13 @@ release-location: ftp://selab.janelia.org/pub/software/infernal/infernal-1.0.2.t
 relative-directory-add-to-path: bin
 autoconf-make-options: -j4
 
+[sortmerna]
+version: 2.0
+build-type: autoconf
+release-file-name: sortmerna-2.0.tar.gz
+release-location: http://bioinfo.lifl.fr/RNA/sortmerna/code/sortmerna-2.0.tar.gz
+relative-directory-add-to-path: .
+
 [cytoscape]
 version: 2.7.0
 build-type: ant
