--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -121,6 +121,14 @@ release-location: http://bioinformatics.hungry.com/clearcut/clearcut-1.0.9.tar.g
 relative-directory-add-to-path: .
 make-options: -j4
 
+[sumaclust]
+version: 1.0
+build-type: make
+repository-type: svn co
+repository-location: http://www.grenoble.prabi.fr/public-svn/LECASofts/sumatra/tags/version1.0
+repository-local-name: suma_package
+relative-directory-add-to-path: sumaclust
+
 [mothur]
 version: 1.25.0
 build-type: copy
