Updated vienna link

--- a/qiime-1.7.0/qiime.conf
+++ b/qiime-1.7.0/qiime.conf
@@ -304,7 +304,7 @@ version: 1.8.4
 build-type: custom
 release-file-name: ViennaRNA-1.8.4.tar.gz
 unzipped-name: ViennaRNA-1.8.4
-release-location: http://www.tbi.univie.ac.at/~ivo/RNA/ViennaRNA-1.8.4.tar.gz
+release-location: http://www.tbi.univie.ac.at/RNA/packages/source/ViennaRNA-1.8.4.tar.gz
 autoconf-configure-options: --without-perl
 relative-directory-add-to-path: .
 
