option make-folderpath-relative-to-local added to support subdirectory Makefiles; flex and sumaclust added

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -121,13 +121,25 @@ release-location: http://bioinformatics.hungry.com/clearcut/clearcut-1.0.9.tar.g
 relative-directory-add-to-path: .
 make-options: -j4
 
+[flex]
+version: 2.5.39
+build-type: autoconf
+release-file-name: flex-2.5.39.tar.gz
+release-location: http://prdownloads.sourceforge.net/flex/flex-2.5.39.tar.gz
+relative-directory-add-to-path: bin
+autoconf-make-options: -j4
+
 [sumaclust]
 version: 1.0
 build-type: make
-repository-type: svn co
+repository-type: svn
 repository-location: http://www.grenoble.prabi.fr/public-svn/LECASofts/sumatra/tags/version1.0
 repository-local-name: suma_package
-relative-directory-add-to-path: sumaclust
+make-folderpath-relative-to-local: suma_package/sumaclust
+relative-directory-add-to-path: .
+repository-options: --non-interactive --trust-server-cert
+make-options: -j4
+deps: flex
 
 [mothur]
 version: 1.25.0
