sortmerna autoconf make options added

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -108,9 +108,11 @@ autoconf-make-options: -j4
 [sortmerna]
 version: 2.0
 build-type: autoconf
-release-file-name: sortmerna-2.0.tar.gz
 release-location: http://bioinfo.lifl.fr/RNA/sortmerna/code/sortmerna-2.0.tar.gz
-relative-directory-add-to-path: .
+release-file-name: sortmerna-2.0.tar.gz
+relative-directory-add-to-path: bin
+autoconf-make-options: -j4
+autoconf-make-install-options: -i
 
 [cytoscape]
 version: 2.7.0
