added m4 for flex gnu microprocessor support

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -121,6 +121,14 @@ release-location: http://bioinformatics.hungry.com/clearcut/clearcut-1.0.9.tar.g
 relative-directory-add-to-path: .
 make-options: -j4
 
+[m4]
+version: 1.4.17
+build-type: autoconf
+release-file-name: m4-1.4.17.tar.gz
+release-location: ftp://ftp.gnu.org/gnu/m4/m4-1.4.17.tar.gz
+relative-directory-add-to-path: bin
+autoconf-make-options: -j4
+
 [flex]
 version: 2.5.39
 build-type: autoconf
