added m4 as deps of flex

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -136,6 +136,7 @@ release-file-name: flex-2.5.39.tar.gz
 release-location: http://prdownloads.sourceforge.net/flex/flex-2.5.39.tar.gz
 relative-directory-add-to-path: bin
 autoconf-make-options: -j4
+deps: m4
 
 [sumaclust]
 version: 1.0
