added autoconf option to rename executable flex to lex required for sumaclust

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -130,12 +130,13 @@ relative-directory-add-to-path: bin
 autoconf-make-options: -j4
 
 [flex]
-version: 2.5.39
+version: 2.5.35
 build-type: autoconf
-release-file-name: flex-2.5.39.tar.gz
-release-location: http://prdownloads.sourceforge.net/flex/flex-2.5.39.tar.gz
+release-file-name: flex-2.5.35.tar.gz
+release-location: http://prdownloads.sourceforge.net/flex/flex-2.5.35.tar.gz
 relative-directory-add-to-path: bin
 autoconf-make-options: -j4
+autoconf-configure-options: --program-transform-name='s/flex/lex/g'
 deps: m4
 
 [sumaclust]
