sumaclust to be downloaded as tar ball

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -142,12 +142,10 @@ deps: m4
 [sumaclust]
 version: 1.0
 build-type: make
-repository-type: svn
-repository-location: http://www.grenoble.prabi.fr/public-svn/LECASofts/sumatra/tags/version1.0
-repository-local-name: suma_package
+release-location: http://bioinfo.lifl.fr/RNA/sortmerna/tmp/suma_package.tar.gz
+release-file-name: suma_package.tar.gz
 make-folderpath-relative-to-local: suma_package/sumaclust
 relative-directory-add-to-path: .
-repository-options: --non-interactive --trust-server-cert
 make-options: -j4
 deps: flex
 
