sumaclust rep changed

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -142,7 +142,7 @@ deps: m4
 [sumaclust]
 version: 1.0
 build-type: make
-release-location: http://bioinfo.lifl.fr/RNA/sortmerna/tmp/suma_package.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/suma_package.tar.gz
 release-file-name: suma_package.tar.gz
 make-folderpath-relative-to-local: suma_package/sumaclust
 relative-directory-add-to-path: .
