make-folderpath-relative-to-local description updated

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -153,7 +153,7 @@ version: 1.0
 build-type: make
 release-location: ftp://thebeast.colorado.edu/pub/suma_package.tar.gz
 release-file-name: suma_package.tar.gz
-make-folderpath-relative-to-local: suma_package/sumaclust
+make-folderpath-relative-to-local: sumaclust
 relative-directory-add-to-path: .
 make-options: -j4
 deps: flex
