--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -108,7 +108,7 @@ autoconf-make-options: -j4
 [sortmerna]
 version: 2.0
 build-type: autoconf
-release-location: http://bioinfo.lifl.fr/RNA/sortmerna/code/sortmerna-2.0.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/sortmerna-2.0.tar.gz
 release-file-name: sortmerna-2.0.tar.gz
 relative-directory-add-to-path: bin
 autoconf-make-options: -j4
