swarm install instructions added

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -305,6 +305,14 @@ repository-type: git
 relative-directory-add-to-path: scripts
 set-environment-variables-deploypath: PYTHONPATH=lib/
 
+[swarm]
+version: 1.2.4
+build-type: make
+repository-local-name: swarm
+repository-location: https://github.com/torognes/swarm.git
+repository-type: git
+relative-directory-add-to-path: .,scripts
+
 [galaxy]
 version: release_2013.01.13
 build-type: copy
