--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -306,11 +306,10 @@ relative-directory-add-to-path: scripts
 set-environment-variables-deploypath: PYTHONPATH=lib/
 
 [swarm]
-version: 1.2.4
+version: 1.2.7
 build-type: make
-repository-local-name: swarm
-repository-location: https://github.com/torognes/swarm.git
-repository-type: git
+release-file-name: swarm-1.2.7.tar.gz
+release-location: https://github.com/torognes/swarm/archive/v1.2.7.tar.gz
 relative-directory-add-to-path: .,scripts
 
 [galaxy]
