--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -106,12 +106,12 @@ relative-directory-add-to-path: bin
 autoconf-make-options: -j4
 
 [sortmerna]
-version: 2.0
-build-type: autoconf
-release-location: ftp://thebeast.colorado.edu/pub/sortmerna-2.0.tar.gz
-release-file-name: sortmerna-2.0.tar.gz
+version: dev
+build-type: custom
+repository-local-name: sortmerna
+repository-location: https://github.com/biocore/sortmerna.git
+repository-type: git
 relative-directory-add-to-path: bin
-autoconf-make-options: -j4
 autoconf-make-install-options: -i
 
 [cytoscape]
