use release version 2.0 sortmerna

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -108,9 +108,8 @@ autoconf-make-options: -j4
 [sortmerna]
 version: dev
 build-type: custom
-repository-local-name: sortmerna
-repository-location: https://github.com/biocore/sortmerna.git
-repository-type: git
+release-file-name: sortmerna-2.0.tar.gz
+release-location: https://github.com/biocore/sortmerna/archive/2.0.tar.gz
 relative-directory-add-to-path: bin
 autoconf-make-install-options: -i
 
