--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -209,6 +209,13 @@ r-package-name: RColorBrewer
 r-package-repo: http://cran.r-project.org
 deps: r
 
+[metagenomeseq]
+version: latest
+build-type: r-package
+r-package-name: metagenomeSeq
+r-package-repo: http://cran.r-project.org
+deps: r
+
 [ampliconnoise]
 version: 1.27
 build-type: custom
