updating metagenomeseq to http://bioconductor.org/biocLite.R

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -213,7 +213,7 @@ deps: r
 version: latest
 build-type: r-package
 r-package-name: metagenomeSeq
-r-package-repo: http://cran.r-project.org
+r-package-repo: http://bioconductor.org/biocLite.R
 deps: r
 
 [ampliconnoise]
