adding biom to R

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -191,6 +191,13 @@ r-package-name: vegan
 r-package-repo: http://cran.r-project.org
 deps: r
 
+[biom]
+version: latest
+build-type: r-package
+r-package-name: biom
+r-package-repo: http://cran.r-project.org
+deps: r
+
 [ape]
 version: latest
 build-type: r-package
