Remove R from QIIME config

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -14,7 +14,7 @@
 ##############################################################################
 
 [dependencies]
-commands: gcc, g++, java, javac, ant
+commands: gcc, g++, java, javac, ant, R
 
 [global]
 log-level: INFO
@@ -161,63 +161,47 @@ release-file-name: mothur-1.25.0.tar.gz
 release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.6.0-dependencies/mothur-1.25.0.tar.gz
 relative-directory-add-to-path: .
 
-[r]
-version: 3.1.2
-build-type: autoconf
-release-file-name: R-3.1.2.tar.gz
-release-location: http://cran.case.edu/src/base/R-3/R-3.1.2.tar.gz
-relative-directory-add-to-path: bin
-autoconf-configure-options: --without-x
-autoconf-make-options: -j4
-
 [random-forest]
 version: latest
 build-type: r-package
 r-package-name: randomForest
 r-package-repo: http://cran.r-project.org
-deps: r
 
 [optparse]
 version: latest
 build-type: r-package
 r-package-name: optparse
 r-package-repo: http://cran.r-project.org
-deps: r
 
 [vegan]
 version: latest
 build-type: r-package
 r-package-name: vegan
 r-package-repo: http://cran.r-project.org
-deps: r
 
 [biom]
 version: latest
 build-type: r-package
 r-package-name: biom
 r-package-repo: http://cran.r-project.org
-deps: r
 
 [ape]
 version: latest
 build-type: r-package
 r-package-name: ape
 r-package-repo: http://cran.r-project.org
-deps: r
 
 [r-color-brewer]
 version: latest
 build-type: r-package
 r-package-name: RColorBrewer
 r-package-repo: http://cran.r-project.org
-deps: r
 
 [metagenomeseq]
 version: latest
 build-type: r-package
 r-package-name: metagenomeSeq
 r-package-repo: http://bioconductor.org/biocLite.R
-deps: r
 
 [ampliconnoise]
 version: 1.27
