--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -203,6 +203,12 @@ build-type: r-package
 r-package-name: metagenomeSeq
 r-package-repo: http://bioconductor.org/biocLite.R
 
+[deseq]
+version: latest
+build-type: r-package
+r-package-name: DESeq
+r-package-repo: http://bioconductor.org/biocLite.R
+
 [ampliconnoise]
 version: 1.27
 build-type: custom
