--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -203,10 +203,10 @@ build-type: r-package
 r-package-name: metagenomeSeq
 r-package-repo: http://bioconductor.org/biocLite.R
 
-[deseq]
+[deseq2]
 version: latest
 build-type: r-package
-r-package-name: DESeq
+r-package-name: DESeq2
 r-package-repo: http://bioconductor.org/biocLite.R
 
 [ampliconnoise]
