updating swarm download link
trying to fix an issue where jenkins fails while trying to get swarm, though we can't reproduce this issue on either Mac OS or Linux

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -309,7 +309,7 @@ set-environment-variables-deploypath: PYTHONPATH=lib/
 version: 1.2.7
 build-type: make
 release-file-name: swarm-1.2.7.tar.gz
-release-location: https://github.com/torognes/swarm/archive/v1.2.7.tar.gz
+release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.9.0-dependencies/swarm-1.2.7.tar.gz
 relative-directory-add-to-path: .,scripts
 
 [galaxy]
