--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -30,13 +30,13 @@ remote-file: http://greengenes.lbl.gov/Download/Sequence_Data/Fasta_data_files/c
 version: 13_8
 build-type: copy
 release-file-name: gg_13_8_otus.tar.gz
-release-location: ftp://greengenes.microbio.me/greengenes_release/gg_13_5/gg_13_8_otus.tar.gz
+release-location: https://www.dropbox.com/s/j88j9h8v47drnyg/gg_13_8_otus.tar.gz
 
 [raxml]
 version: 7.3.0
 build-type: make
 release-file-name:stamatak-standard-RAxML-5_7_2012.tgz
-release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.5.0-dependencies/stamatak-standard-RAxML-5_7_2012.tgz
+release-location: https://dl.dropboxusercontent.com/u/2868868/qdc/pub/QIIME-v1.5.0-dependencies/stamatak-standard-RAxML-5_7_2012.tgz
 make-options: -f Makefile.gcc -j4
 relative-directory-add-to-path: .
 
@@ -62,7 +62,7 @@ version: 3.1
 build-type: make
 release-file-name: cd-hit-2007-0131.tar.gz
 unzipped-name: cd-hit
-release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.5.0-dependencies/cd-hit-2007-0131.tgz
+release-location: https://dl.dropboxusercontent.com/u/2868868/qdc/pub/QIIME-v1.5.0-dependencies/cd-hit-2007-0131.tgz
 relative-directory-add-to-path: .
 make-options: -j4
 
@@ -147,7 +147,7 @@ deps: m4
 [sumaclust]
 version: 1.0
 build-type: make
-release-location: ftp://thebeast.colorado.edu/pub/suma_package.tar.gz
+release-location: https://dl.dropboxusercontent.com/u/2868868/qdc/pub/suma_package.tar.gz
 release-file-name: suma_package.tar.gz
 make-folderpath-relative-to-local: sumaclust
 relative-directory-add-to-path: .
@@ -158,7 +158,7 @@ deps: flex
 version: 1.25.0
 build-type: copy
 release-file-name: mothur-1.25.0.tar.gz
-release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.6.0-dependencies/mothur-1.25.0.tar.gz
+release-location: https://dl.dropboxusercontent.com/u/2868868/qdc/pub/QIIME-v1.6.0-dependencies/mothur-1.25.0.tar.gz
 relative-directory-add-to-path: .
 
 [random-forest]
@@ -309,7 +309,7 @@ set-environment-variables-deploypath: PYTHONPATH=lib/
 version: 1.2.7
 build-type: make
 release-file-name: swarm-1.2.7.tar.gz
-release-location: ftp://thebeast.colorado.edu/pub/QIIME-v1.9.0-dependencies/swarm-1.2.7.tar.gz
+release-location: https://dl.dropboxusercontent.com/u/2868868/qdc/pub/QIIME-v1.9.0-dependencies/swarm-1.2.7.tar.gz
 relative-directory-add-to-path: .,scripts
 
 [galaxy]
