--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -30,7 +30,7 @@ remote-file: http://greengenes.lbl.gov/Download/Sequence_Data/Fasta_data_files/c
 version: 13_8
 build-type: copy
 release-file-name: gg_13_8_otus.tar.gz
-release-location: https://www.dropbox.com/s/j88j9h8v47drnyg/gg_13_8_otus.tar.gz
+release-location: https://dl.dropboxusercontent.com/u/2868868/qdc/greengenes_release/gg_13_8_otus.tar.gz
 
 [raxml]
 version: 7.3.0
