new installation paths sortmerna and sumaclust

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -150,8 +150,8 @@ deps: m4
 [sumaclust]
 version: 1.0
 build-type: make
-release-location: ftp://thebeast.colorado.edu/pub/suma_package.tar.gz
-release-file-name: suma_package.tar.gz
+release-location: ftp://ftp.microbio.me/pub/QIIME-v1.9.0-dependencies/suma_package_V_1.0.00.tar.gz
+release-file-name: suma_package_V_1.0.00.tar.gz
 make-folderpath-relative-to-local: sumaclust
 relative-directory-add-to-path: .
 make-options: -j4
