Remove R packages; update links to ftp.microbio.me

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -30,13 +30,13 @@ remote-file: http://greengenes.lbl.gov/Download/Sequence_Data/Fasta_data_files/c
 version: 13_8
 build-type: copy
 release-file-name: gg_13_8_otus.tar.gz
-release-location: https://dl.dropboxusercontent.com/u/2868868/qdc/greengenes_release/gg_13_8_otus.tar.gz
+release-location: ftp://ftp.microbio.me/greengenes_release/gg_13_5/gg_13_8_otus.tar.gz
 
 [raxml]
 version: 7.3.0
 build-type: make
 release-file-name:stamatak-standard-RAxML-5_7_2012.tgz
-release-location: https://dl.dropboxusercontent.com/u/2868868/qdc/pub/QIIME-v1.5.0-dependencies/stamatak-standard-RAxML-5_7_2012.tgz
+release-location: ftp://ftp.microbio.me/pub/QIIME-v1.5.0-dependencies/stamatak-standard-RAxML-5_7_2012.tgz
 make-options: -f Makefile.gcc -j4
 relative-directory-add-to-path: .
 
@@ -62,7 +62,7 @@ version: 3.1
 build-type: make
 release-file-name: cd-hit-2007-0131.tar.gz
 unzipped-name: cd-hit
-release-location: https://dl.dropboxusercontent.com/u/2868868/qdc/pub/QIIME-v1.5.0-dependencies/cd-hit-2007-0131.tgz
+release-location: ftp://ftp.microbio.me/pub/QIIME-v1.5.0-dependencies/cd-hit-2007-0131.tgz
 relative-directory-add-to-path: .
 make-options: -j4
 
@@ -147,7 +147,7 @@ deps: m4
 [sumaclust]
 version: 1.0
 build-type: make
-release-location: https://dl.dropboxusercontent.com/u/2868868/qdc/pub/suma_package.tar.gz
+release-location: ftp://ftp.microbio.me/pub/suma_package.tar.gz
 release-file-name: suma_package.tar.gz
 make-folderpath-relative-to-local: sumaclust
 relative-directory-add-to-path: .
@@ -158,56 +158,8 @@ deps: flex
 version: 1.25.0
 build-type: copy
 release-file-name: mothur-1.25.0.tar.gz
-release-location: https://dl.dropboxusercontent.com/u/2868868/qdc/pub/QIIME-v1.6.0-dependencies/mothur-1.25.0.tar.gz
+release-location: ftp://ftp.microbio.me/pub/QIIME-v1.6.0-dependencies/mothur-1.25.0.tar.gz
 relative-directory-add-to-path: .
-
-[random-forest]
-version: latest
-build-type: r-package
-r-package-name: randomForest
-r-package-repo: http://cran.r-project.org
-
-[optparse]
-version: latest
-build-type: r-package
-r-package-name: optparse
-r-package-repo: http://cran.r-project.org
-
-[vegan]
-version: latest
-build-type: r-package
-r-package-name: vegan
-r-package-repo: http://cran.r-project.org
-
-[biom]
-version: latest
-build-type: r-package
-r-package-name: biom
-r-package-repo: http://cran.r-project.org
-
-[ape]
-version: latest
-build-type: r-package
-r-package-name: ape
-r-package-repo: http://cran.r-project.org
-
-[r-color-brewer]
-version: latest
-build-type: r-package
-r-package-name: RColorBrewer
-r-package-repo: http://cran.r-project.org
-
-[metagenomeseq]
-version: latest
-build-type: r-package
-r-package-name: metagenomeSeq
-r-package-repo: http://bioconductor.org/biocLite.R
-
-[deseq2]
-version: latest
-build-type: r-package
-r-package-name: DESeq2
-r-package-repo: http://bioconductor.org/biocLite.R
 
 [ampliconnoise]
 version: 1.27
@@ -309,7 +261,7 @@ set-environment-variables-deploypath: PYTHONPATH=lib/
 version: 1.2.7
 build-type: make
 release-file-name: swarm-1.2.7.tar.gz
-release-location: https://dl.dropboxusercontent.com/u/2868868/qdc/pub/QIIME-v1.9.0-dependencies/swarm-1.2.7.tar.gz
+release-location: ftp://ftp.microbio.me/pub/QIIME-v1.9.0-dependencies/swarm-1.2.7.tar.gz
 relative-directory-add-to-path: .,scripts
 
 [galaxy]
