update swarm 1.2.7 to 1.2.19

--- a/qiime-dev/qiime.conf
+++ b/qiime-dev/qiime.conf
@@ -257,10 +257,10 @@ relative-directory-add-to-path: scripts
 set-environment-variables-deploypath: PYTHONPATH=lib/
 
 [swarm]
-version: 1.2.7
+version: 1.2.19
 build-type: make
-release-file-name: swarm-1.2.7.tar.gz
-release-location: ftp://ftp.microbio.me/pub/QIIME-v1.9.0-dependencies/swarm-1.2.7.tar.gz
+release-file-name: swarm-1.2.19.tar.gz
+release-location: https://github.com/torognes/swarm/archive/1.2.19.tar.gz
 relative-directory-add-to-path: .,scripts
 
 [galaxy]
